--- a/composer.json
+++ b/composer.json
@@ -4,8 +4,8 @@
     "type": "library",
     "require": {
         "php": ">=8.0",
-        "psr/simple-cache": "3.0.x-dev",
-        "psr/cache": "3.0.x-dev"
+        "psr/simple-cache": "3.0.0",
+        "psr/cache": "3.0.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^10.0",
